# gstreamer_rtsp

./: CMakeLists.txt  client.cpp  main.cpp  server.cpp
